Fix code highlight in dark mode

--- a/Desktop/html/css/lightTheme-jasp.css
+++ b/Desktop/html/css/lightTheme-jasp.css
@@ -211,7 +211,7 @@ div.jasp-image-image.no-data.error {
 }
 
 .jasp-rsyntax-container {
-    background-color: rgb(235, 235, 235);
+    background-color: #f3f3f3;
 }
 
 /* Track */
